tdf#53614 - Don't try to lock file after cancelling the import process

After cancelling the import process don't try to lock the file.
Otherwise, the document in use dialog will be shown which has literally
no effect.

Change-Id: I0a9c786899a7fc648678c785e316d28fc43c7fe7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162150
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>